
0.4.7
* Add user agent string to request headers
* Fix http redirection header bei relativen urls
* Added user agent string to most http calls
* Add cache to PSX_Base getRequest method so calling the method multiple times
  will always return the same object
* Improved PSX_Loader class. The name of the index method must be now __index
  wich is called if no other method is specified in the request. This was done 
  because of constructor conflict if the class also the name index and to 
  document the magical behavior 
* Added method getValidator(), getMethod(), getUrl(), getHeaders(), getHeader(), 
  getParameter() and getBody() to PSX_ModuleAbstract
* Using PSX_PATH_CACHE path in file cache handler
* Fix markdown class encode emphasis
* Add method setSavePath to PSX_Session class

0.4.6
* Added Atom and RSS static request method
* Improved docblock comments
* Removed unused DOM package
* Changed constructor of PSX_Sql class
* Added cookie store to http package
* Improved cache classes and tests
* Moved class PSX_Get, PSX_Post, PSX_Cookie, PSX_Request, PSX_Files in input
* package and improved tests
* Updated paging class and tests
* Added calendar class
* Added improved psx html package add html5 lexer and filter library and updated
* html parser
* Added getParameters to dependency abstract
* Added view dependency and renamed module DefaultAbstract to ViewAbstract

0.4.5
* Renamed constant in_psx to PSX because of namespace issue
* Added data multipart/form-data reader
* Added PSX_Base class containing informations about the framework and current
  http request
* Moved several methods from PSX_Config into PSX_Base class
* Added data reader and writer factory
* Added Oauth2 client library
* Added payment paypal library
* Improved log library
* Removed ca-bundle.pem from library and add method to set ca path for curl
  handler
* Renamed static method "isFile" to "exists" in file class because the class