@@ -27,7 +27,7 @@ $config = array(
 
 	'psx_url'                 => 'http://127.0.0.1/projects/psx/public',
 	'psx_dispatch'            => 'index.php/',
-	'psx_timezone'            => 'Europe/Berlin',
+	'psx_timezone'            => 'UTC',
 	'psx_gzip'                => false,
 	'psx_debug'               => true,
 
